err/statsite.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/statsite'...
Listing './lib/python3.5/site-packages/statsite/bin'...
Compiling './lib/python3.5/site-packages/statsite/bin/statsite.py'...
***   File "./lib/python3.5/site-packages/statsite/bin/statsite.py", line 93
    raise StatsiteCommandError, "Failed to parse configuration files."
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/statsite/collector.py'...
***   File "./lib/python3.5/site-packages/statsite/collector.py", line 148
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/statsite/metrics_store.py'...
***   File "./lib/python3.5/site-packages/statsite/metrics_store.py", line 42
    if port <= 0: raise ValueError, "Port must be positive!"
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/statsite/parser.py'...
***   File "./lib/python3.5/site-packages/statsite/parser.py", line 23
    raise ValueError, "Invalid line: '%s'" % line
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/statsite/util.py'...
***   File "./lib/python3.5/site-packages/statsite/util.py", line 46
    raise ValueError, "Must specify a module for class: %s" % full_string
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/statsite-0.4.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
